# src/use_cases/routes.ts
@@ -2,7 +2,6 @@ import * as express from "express";
 
 import {
   createGroup,
-  findAllUser,
   markAsDeleted,
   searchUserAndGroup,
   searchUsers,
@@ -10,7 +9,6 @@ import {
 import { authMiddleware } from "../middlewares/auth.middeleware";
 
 export const useСases: express.IRouter = express.Router();
-useСases.get("/find-all", findAllUser);
 useСases.get("/search", authMiddleware, searchUserAndGroup);
 useСases.post("/mark-as-deleted", authMiddleware, markAsDeleted);
 useСases.post("/create-group", authMiddleware, createGroup);
